--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "^7.20.0",
     "@openapitools/openapi-generator-cli": "^2.23.1",
     "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.0"
   },
   "private": true
