--- a/app/app.json
+++ b/app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Peerly",
-    "slug": "peerly",
+    "name": "PeerPing",
+    "slug": "peerping",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,7 +16,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.peerly.app",
+      "bundleIdentifier": "com.peerping.app",
       "infoPlist": {
         "NSCameraUsageDescription": "This app needs access to camera to take profile photos.",
         "NSPhotoLibraryUsageDescription": "This app needs access to photo library to select profile photos."
@@ -27,7 +27,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.peerly.app",
+      "package": "com.peerping.app",
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE"
