debugged expo start

--- a/app/app.json
+++ b/app/app.json
@@ -42,7 +42,8 @@
       }
     },
     "plugins": [
-      "expo-notifications"
+      "expo-notifications",
+      "expo-secure-store"
     ]
   }
 }
