--- a/app/package.json
+++ b/app/package.json
@@ -12,24 +12,24 @@
     "type-check": "echo 'Type checking not set up yet'"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@tanstack/react-query": "^5.87.4",
     "expo": "~50.0.0",
-    "expo-image-picker": "^17.0.8",
-    "expo-notifications": "^0.32.11",
-    "expo-secure-store": "^15.0.7",
+    "expo-image-picker": "~14.7.1",
+    "expo-notifications": "~0.27.8",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-mmkv": "^3.3.1",
-    "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.3.3",
     "zustand": "^5.0.8"
   },
