--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -11,7 +11,8 @@
       "@navigation/*": ["./src/navigation/*"],
       "@utils/*": ["./src/utils/*"],
       "@constants/*": ["./src/constants/*"],
-      "@stores/*": ["./src/stores/*"]
+      "@stores/*": ["./src/stores/*"],
+      "@theme/*": ["./src/theme/*"]
     }
   }
 }
