--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,7 @@
     "react-native-mmkv": "^3.3.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "^4.16.0",
+    "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.3.3",
     "zustand": "^5.0.8"
   },
