--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "expo-notifications": "~0.27.8",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "immer": "^10.1.3",
     "react": "18.2.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.73.6",
